Fix dark mode
This fixes dark mode and adds better isolation to the styles to be used for the container div.

--- a/front_end/panels/elements/components/computedStyleProperty.css
+++ b/front_end/panels/elements/components/computedStyleProperty.css
@@ -67,9 +67,10 @@
   display: inline-block;
 }
 
-.hidden {
+#-blink-dev-tools .hidden {
   display: none;
 }
+
 /* narrowed styles */
 :host-context(.computed-narrow) .computed-style-property {
   white-space: normal;
@@ -98,6 +99,7 @@
     display: inline-block;
   }
 }
+
 /* high-contrast styles */
 @media (forced-colors: active) {
   .computed-style-property.inherited {
