--- a/front_end/ui/legacy/splitWidget.css
+++ b/front_end/ui/legacy/splitWidget.css
@@ -90,3 +90,7 @@
 :host-context(.disable-resizer-for-elements-hack) .shadow-split-widget-resizer {
   pointer-events: none;
 }
+
+.shadow-split-widget .hidden, .shadow-split-widget.hidden {
+  display: none;
+}
